@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.2894 2019/08/09 19:11:22 brook Exp $
+# $NetBSD: Makefile,v 1.2895 2019/08/09 19:12:14 brook Exp $
 #
 
 COMMENT=	Development utilities
@@ -50,6 +50,7 @@ SUBDIR+=	R-remotes
 SUBDIR+=	R-repr
 SUBDIR+=	R-rio
 SUBDIR+=	R-rlang
+SUBDIR+=	R-roxygen2
 SUBDIR+=	R-rprojroot
 SUBDIR+=	R-sessioninfo
 SUBDIR+=	R-tcltk2
