@@ -1,0 +1,5 @@
+Generate your Rd documentation, 'NAMESPACE' file, and collation field
+using specially formatted comments. Writing documentation in-line with
+code makes it easier to keep your documentation up-to-date as your
+requirements change. 'Roxygen2' is inspired by the 'Doxygen' system
+for C++.
